# job-application-automation

./: .env.example  .gitignore  README.md  docker-compose.ollama.yml  pyproject.toml
profile/: candidate.json
src/job_application_automation/: __init__.py  ai_client.py  ai_email.py  ai_job.py  ai_profile.py  cli.py  email_tools.py  json_utils.py  models.py  ocr.py  ollama.py  ollama_service.py  optimizer.py  outlook_com_mailer.py  paths.py  pipeline.py  resume_reader.py  signature.py  workflow.py
tests/: test_ai_client.py  test_ai_email.py  test_ai_job.py  test_ai_profile.py  test_cli.py  test_ocr.py  test_ollama_service.py  test_optimizer.py  test_pipeline.py  test_resume_reader.py  test_workflow.py
