[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-application-automation"
version = "0.1.0"
description = "Python project for personalized job applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Pyu"}]
dependencies = [
    "onnxruntime>=1.26.0",
    "pillow>=12.2.0",
    "pypdf>=5.0.0",
    "rapidocr>=3.8.2",
]

[project.scripts]
job-application-automation = "job_application_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
